src/styles/global.css
/* ... */
.noise-effect {
  display: none;
}

.hidden {
  opacity: 0;
  transition: opacity 1s ease;
}

.show {
  opacity: 1;
  animation: fade-up 800ms ease;
  animation-fill-mode: backwards;
}

* {
  -webkit-tap-highlight-color: transparent;
}

body, html {
  overflow-x: hidden;
}

body {
  position: relative;
  font-family: "Inter";
  background: hsl(var(--background));
  color: hsl(var(--text));
  width: 100%;
  min-height: 100vh;
  overflow-x: hidden;
}

body * {
  font-family: "Inter";
  display: block;
}

body::before {
  content: '';
  position: absolute;
  inset: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  background: linear-gradient(hsl(var(--background)), hsl(var(--background-dark)) 80%);
  filter: url(#grainy);
}

.light body::before {
  filter: url(#grainy-light);
}

header {
  position: fixed;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  padding-top: 2rem;
  transition: transform 0.5s ease;
}

header.show {
  animation: slide-down 800ms ease;
  animation-composition: accumulate;
}


nav {
  display: flex;
  align-items: center;
  padding: 0 2rem;
  width: 100%;
  border-radius: 100px;
  max-width: 900px;
  justify-content: space-between;
  background: hsla(var(--nav-background), 0.05);
  backdrop-filter: blur(10px);
  color: hsl(var(--text-primary));
  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.25),
              0 1px 1px rgba(0, 0, 0, 0.05),
              0 2px 2px rgba(0, 0, 0, 0.05),
              0 4px 4px rgba(0, 0, 0, 0.05),
              0 8px 8px rgba(0, 0, 0, 0.05);
  transition: transform 200ms ease-out, opacity 200ms ease;
}

.light nav {
  background: hsla(var(--nav-background), 0.7);
}

nav.hide {
  opacity: 0;
  transform: translateY(-200%);
  transition: transform 200ms ease-in, opacity 200ms ease;
}

nav ul {
  list-style-type: none;
  display: flex;
  justify-content: center;
  gap: 1rem;
  align-items: center;
  padding: 0.4rem 0;
  font-size: 0.9rem;
  font-weight: 300;
}

nav li {
  position: relative;
  padding: 0.4rem 1rem;
}

nav li::before {
  content: '';
  pointer-events: none;
  position: absolute;
  bottom: 0;
  left: 50%;
  width: 50%;
  height: 3px;
  transform: translateX(-50%) scaleX(0) ;
  border-radius: 50px;
  background: hsl(var(--text-primary), 0.5);
  transition: transform 200ms ease;
}

nav li:hover::before, nav li.active::before {
  transform: translateX(-50%) scaleX(1);
}



nav a {
  color: inherit;
  text-decoration: none;
}

.nav-button {
  width: 1.5rem;
  aspect-ratio: 1;
  background: none;
  border: none;
  color: inherit;
  padding: 0;
  cursor: pointer;
}

nav svg {
  width: 100%;
  aspect-ratio: 1;
  pointer-events: none;
}

.options {
  position: absolute;
  top: calc(100% + 1rem);
  right: 0;
  display: none;
  flex-direction: column;
  font-size: 0.9rem;
  min-width: 150px;
  padding: 0.2rem;
  border-radius: 15px;
  background: hsla(var(--nav-background), 0.05);
  backdrop-filter: blur(10px);
  color: hsl(var(--text-primary));
  box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.25),
              0 1px 1px rgba(0, 0, 0, 0.05),
              0 2px 2px rgba(0, 0, 0, 0.05),
              0 4px 4px rgba(0, 0, 0, 0.05),
              0 8px 8px rgba(0, 0, 0, 0.05);
  animation: hideOptions 200ms ease;
}

.light .options {
  background: hsla(var(--nav-background), 0.7);
}

.options.open {
  display: flex;
  animation: showOptions 200ms ease;
}

.option {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  gap: 2rem;
  border-radius: 10px;
  cursor: pointer;
}

.option:hover {
  background: rgba(255, 255, 255, 0.1);
}

.option button {
  position: relative;
  width: 2.5rem;
  height: 1.5rem;
  border: none;
  border-radius: 50px;
  background: lightgray;
  cursor: pointer;
}

.option button::before {
  content: '';
  position: absolute;
  top: 50%;
  left: 1px;
  transform: translateY(-50%);
  height: 90%;
  aspect-ratio: 1;
  background: white;
  border-radius: 50px;
  transition: transform 200ms ease;
}

.option.enabled button {
  background: hsl(110, 50%, 50%);
}

.option.enabled button::before {
  transform: translateY(-50%) translateX(75%);
}

main {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.section-heading {
  font-size: 2.2rem;
  font-weight: 800;
}

.section-description {
  max-width: 75ch;
  text-align: center;
  font-size: 1.2rem;
}

#hero {
  position: relative;
  width: 100%;
  min-height: 100dvh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5rem;
  background: radial-gradient(ellipse 50% 50% at top center, hsla(var(--background-yellow), 0.25), hsla(var(--background), 0)),
              radial-gradient(circle 300px at 25% 50%, hsla(var(--background-blue), 0.25), hsla(var(--background), 0));
}

#hero-img, #about-img {
  position: relative;
  transition: transform 200ms ease;
  box-shadow: var(--card-shadow);
  overflow: hidden;
  border-radius: 10px;
  will-change: transform;
}

@keyframes shine {
  100% {
    transform: translate(300%, 30%) rotate(45deg);
  }
}

#hero-img::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100px;
  height: 150%;
  opacity: 0.7;
  transform: translate(-60%, -60%) rotate(45deg);
  background: linear-gradient(90deg,rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0) 100%);
}

#hero-img:hover::after {
  animation: shine 700ms ease;
}

#hero-img:hover, #about-img:hover {
  transform: scale(102%) translateY(-1%) rotate(-3deg);
}

.hero-content {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 7rem;
}

#hero-img {
  width: 300px;
}

#hero-img.show {
  animation-delay: 200ms;
}

#hero img {
  max-width: 100%;
  aspect-ratio: 3 / 4;
  object-fit: cover;
  border: 5px solid white;
  border-radius: 10px;
}
/* ... */

